# doc-oca-tic-toi

./: .gitignore  404.html  README.md  dictionary.txt  grammar_file.lark  index.html  line_grammar.txt  mkdocs.yml  obsplan.md  obsplanparse.py  pyproject.toml  sample_observation_plan.yaml
.github/workflows/: ci.yml
docs/: index.md
sample_observation_plans/: compressed_sample_observation_plan.json  compressed_sample_observation_plan.yaml  sample_observation_plan.json  sample_observation_plan.yaml
search/: search_index.json
tests/: file1.txt  file2.txt  file3.txt  test_file.txt  test_haloworld.py  test_parser.py
